# w3d-translator

./: .editorconfig  .gitignore  NOTES.md  ProjectBuilder.py  README.md  UNITY.md  command.txt  conda.yml  old_script.py  pseudocode.txt  pyproject.toml  vs-classes.cs
classes/: Actions.cs  Age.cs  Axis.cs  Background.cs  Bounce.cs  Box.cs  CameraPos.cs  CaveCameraPos.cs  Clicks.cs  Content.cs  Cylinder.cs  Direction.cs  Disc.cs  Event.cs  EventRoot.cs  EventTrigger.cs  Global.cs  Gravity.cs  Group.cs  GroupRef.cs  GroupRoot.cs  HeadTrack.cs  Image.cs  Light.cs  Line.cs  Link.cs  LinkChange.cs  LinkRoot.cs  LookAt.cs  Mode.cs  MoveCave.cs  MoveRel.cs  Movement.cs  NumClicks.cs  Object.cs  ObjectChange.cs  ObjectRoot.cs  Objects.cs  OrbitPoint.cs  ParticleAction.cs  (+26 more)
docs/: CAVE.md  HMD.md  MiddleVR.md  UNITY.md  VR.md  Writing3D.md
examples/cweditor/: everything.xml  minimum.xml
examples/samples/: run.blend  sample_00_random.xml  sample_01_first.xml  sample_07_stereoimage.xml  sample_09_fontlights.xml  sample_10_textalign.xml  sample_16_multiline.xml  vr_movement.xml
in/: play.xml
in/Visualizing_Rafson_Schwartz_Spr15/: run - Copy.xml  run_b4_5.14revisionsBySM.xml
schema/: caveconv.xslt  caveconv2.xslt  caveconv3.xslt  caveconv4.xslt  caveconv5.xslt  caveconv6.xslt  caveconv7.xslt  caveschema.xml  caveschema.xsd  caveschema.xui  caveschema_en.nls
test/: sample.xml
unity/: CAVE Template.scenetemplate  CAVE.scenetemplate  CAVE.unitypackage  CubeScene.unity  EscapeRoom.unity
w3d_translator/: __init__.py  errors.py  read_xml.py  threads.py  translate.py  unity.py  utils.py  validate.py  w3d_translator.py  xml_to_unity.py
(+188 files in other folders)
