[tool.poetry]
name = "w3d-translator"
version = "0.1.0"
description = "Translates W3D xml projects for Unity"
authors = ["RobertGemmaJr <rgemma.jr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
unityparser = "^2.1.5"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
