[tool.poetry]
name = "w3d-translator"
version = "0.1.0"
description = "Translates W3D xml projects for Unity"
authors = ["RobertGemmaJr <rgemma.jr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
unityparser = "^2.1.5"

[tool.poetry.scripts]
w3d-translator ="w3d_translator.w3d_translator:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
